<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/_text_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_numero1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/_numero1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_numero"
        android:maxLength="9"
        android:inputType="numberDecimal"
        android:ems="10" >
    </EditText>

    <TextView
        android:id="@+id/_text_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_numero2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/_numero2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_numero"
        android:maxLength="9"
        android:inputType="numberDecimal"
        android:ems="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/_select_op"
            android:layout_weight="1"
            android:layout_width="100sp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/_ejecutar"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_realizar" />

    </LinearLayout>

    <TextView
        android:id="@+id/_text_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_resultado"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/_resultado"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

</LinearLayout>